--- a/_includes/episode_title.html
+++ b/_includes/episode_title.html
@@ -3,6 +3,11 @@
   </div>
   <div class="col-md-10">
     <h1 class="maintitle">{{ page.title }}</h1>
+    <p class="text-center">
+        <a href="https://matthewfeickert.github.io/usatlas-computing-bootcamp-2020/">
+            <button type="button" class="btn btn-info" style="text-align:center">US ATLAS Computing Workshop 2020</button>
+        </a>
+    </p>
   </div>
   <div class="col-md-1">
   </div>
