--- a/_includes/main_title.html
+++ b/_includes/main_title.html
@@ -7,7 +7,7 @@
 <h1 class="maintitle"><a href="{{ relative_root_path }}{% link index.md %}">{{ site.title }}</a>{% if page.title %}: {{ page.title }}{% endif %}</h1>
 
 <p class="text-center">
-    <a href="https://matthewfeickert.github.io/usatlas-computing-bootcamp-2020/">
-        <button type="button" class="btn btn-info" style="text-align:center">US ATLAS Computing Workshop 2020</button>
+    <a href="https://jghaley.github.io/usatlas-computing-bootcamp-2021/">
+        <button type="button" class="btn btn-info" style="text-align:center">US ATLAS Computing Workshop 2021</button>
     </a>
 </p>
